--- a/InstaFakeID_Detection.ipynb
+++ b/InstaFakeID_Detection.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vidhan-tiwari/Machine-Learning-Projects/blob/main/InstaFakeID_Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vidhan-tiwari/Fake_instagram_account_detection/blob/main/InstaFakeID_Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -179,32 +179,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# for col in non_binary_columns[]:\n",
-        "#   sns.histplot(data = train_df,x = col,kde = True)\n",
-        "#   plt.show()"
-      ],
-      "metadata": {
-        "id": "w2MrjR-u9q19"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "FBfyFC5hYIcN"
-      },
-      "outputs": [],
-      "source": [
-        "# for i in range(5):\n",
-        "#   sns.histplot(data = train_df,x = non_binary_columns[i],kde = True)\n",
-        "#   plt.show()"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "Fu10ZUP9YWa4"
@@ -351,18 +325,15 @@
         "\n",
         "\n",
         "def scale_dataframe(df, scaler = None):\n",
-        "    # Create a copy to avoid modifying the original DataFrame\n",
         "    df_scaled = df.copy()\n",
-        "    columns = df_scaled.columns # Store column names\n",
+        "    columns = df_scaled.columns\n",
         "\n",
-        "    # Initialize the StandardScaler\n",
+        "\n",
         "    if scaler is None:\n",
         "      scaler = StandardScaler()\n",
         "      df_scaled_values = scaler.fit_transform(df_scaled)\n",
         "    else:\n",
         "      df_scaled_values = scaler.transform(df_scaled)\n",
-        "\n",
-        "    # Convert the scaled NumPy array back to a pandas DataFrame\n",
         "    df_scaled = pd.DataFrame(df_scaled_values, columns=columns)\n",
         "\n",
         "    return df_scaled, scaler"
@@ -464,10 +435,9 @@
       "source": [
         "def compute_cost_vectorized(X, w, b, y):\n",
         "  m = X.shape[0]\n",
-        "  z = X @ w + b  # (m,n) @ (n,) -> (m,). Vectorized dot product for all examples!\n",
-        "  f_wb = sigmoid(z) # (m,) vector of all predictions\n",
+        "  z = X @ w + b  # (m,n) @ (n,) -> (m,).\n",
+        "  f_wb = sigmoid(z) # (m,)\n",
         "\n",
-        "  # Element-wise operations on the entire vectors\n",
         "  cost = -y * np.log(f_wb) - (1 - y) * np.log(1 - f_wb)\n",
         "  total_cost = np.sum(cost) / m\n",
         "\n",
@@ -489,8 +459,8 @@
         "\n",
         "  error = f_wb - y   # (m,) vector of all errors\n",
         "\n",
-        "  # (m,) * (m, n) is not what we want. We need (n,) result.\n",
-        "  # So we do (n, m) @ (m,) -> (n,)\n",
+        "  # (m,) * (m,n) is not what we want ,we  need (n,)\n",
+        "  # s0 we do (n,m) @ (m,) -> (n,)\n",
         "  dj_dw = (X.T @ error) / m # transpose of X(m,n) is X.T(n,m)\n",
         "  dj_db = np.sum(error) / m\n",
         "\n",
@@ -514,7 +484,7 @@
         "    w = w - alpha * dj_dw\n",
         "    b = b - alpha * dj_db\n",
         "\n",
-        "    if i % 5000 == 0: # Check cost less frequently to save time\n",
+        "    if i % 5000 == 0:\n",
         "        cost = compute_cost_vectorized(X, w, b, y)\n",
         "        cost_history.append(cost)\n",
         "        print(f\"Iteration {i:5d}: Cost {cost:0.4f}\")\n",
@@ -533,7 +503,7 @@
         "def predict_vectorized(X, w, b):\n",
         "  z = X @ w + b\n",
         "  f_wb = sigmoid(z)\n",
-        "  p = f_wb >= 0.5 # Creates a boolean array\n",
+        "  p = f_wb >= 0.5\n",
         "  return p.astype(int)"
       ],
       "metadata": {
@@ -596,8 +566,8 @@
       "source": [
         "plt.figure(figsize=(10, 6))\n",
         "plt.plot(\n",
-        "    range(len(cost_history)),  # X-axis: iteration numbers (0 to 9999)\n",
-        "    cost_history,              # Y-axis: cost values\n",
+        "    range(len(cost_history)),\n",
+        "    cost_history,\n",
         "    color='blue',\n",
         "    linestyle='solid',\n",
         "    linewidth=2\n",
@@ -699,16 +669,16 @@
         "\n",
         "    record_selected = record_selected.astype(float)\n",
         "    # convert np array into dataframe\n",
-        "    # Reshape the 1D array to a 2D array with one row\n",
+        "    # reshape 1D array into a 2D array with one row\n",
         "    df_selected = pd.DataFrame(record_selected.reshape(1, -1), columns = X_train.columns)\n",
         "    # transform the data_frame using up-written transform function\n",
         "    transformed_selected_df,pt  = transform(df_selected,pt)\n",
         "    # scale the data_frame using up_written scale function\n",
         "    scaled_transformed_df ,scaler = scale_dataframe(transformed_selected_df,scaler)\n",
         "\n",
-        "    # ----- 3.3 Logistic score & decision ‑--–\n",
-        "    prob_fake = sigmoid(scaled_transformed_df.values @ w + b)[0]   # scalar\n",
-        "    is_not_fake = prob_fake < threshold                 # True == not-fake\n",
+        "\n",
+        "    prob_fake = sigmoid(scaled_transformed_df.values @ w + b)[0]\n",
+        "    is_not_fake = prob_fake < threshold\n",
         "\n",
         "    return is_not_fake, prob_fake"
       ],
@@ -730,11 +700,11 @@
       "cell_type": "code",
       "source": [
         "all_records = {\n",
-        "    \"Person 1\": np.array([1, 0.25,  7, 0, 0, 19, 0, 1, 0, 277, 220]), # vini\n",
-        "    \"Person 2\": np.array([1, 0.17, 22, 0, 0, 37, 0, 1, 7, 343, 308]), # var\n",
-        "    \"Person 3\": np.array([1, 0.16, 13, 0, 0, 0,  0, 1, 0, 302, 736]), # vab\n",
-        "    \"Person 4\": np.array([0, 0.11, 17, 0, 0, 0,  0, 1, 0, 127, 247]), # sup\n",
-        "    \"Random 1\": np.array([0, 0.05,  6, 0.15, 0, 32, 1,0, 34567,78, 69978])\n",
+        "    \"Person 1\": np.array([1, 0.25,  7, 0, 0, 19, 0, 1, 0, 277, 220]), # person_1\n",
+        "    \"Person 2\": np.array([1, 0.17, 22, 0, 0, 37, 0, 1, 7, 343, 308]), # person_2\n",
+        "    \"Person 3\": np.array([1, 0.16, 13, 0, 0, 0,  0, 1, 0, 302, 736]), # person_3\n",
+        "    \"Person 4\": np.array([0, 0.11, 17, 0, 0, 0,  0, 1, 0, 127, 247]), # person_4\n",
+        "    \"Random 1\": np.array([0, 0.05,  6, 0.15, 0, 32, 1,0, 34567,78, 69978]) # randomly selected\n",
         "}"
       ],
       "metadata": {
@@ -762,7 +732,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMD+julRWRU3+NYcmU0BYlp",
+      "authorship_tag": "ABX9TyM37SrOA7ksXnEezn3J8te+",
       "include_colab_link": true
     },
     "kernelspec": {
